# Generate_checkerBoard

./: CMakeLists.txt  README.md  main3.cpp
